<resources>
    <string name="app_name">Don\'t forget your medicine</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--Login-->
    <string name="jump_to_home">Get started</string>
    <string name="login_failed">Login failed, please check your Internet connection</string>
    <string name="login_sign">Signing in&#8230;</string>

    <!--Navigation menu-->
    <string name="nav_home">Today</string>
    <string name="nav_profile">Add reminder</string>
    <string name="nav_map">Find a pharmacy</string>
    <string name="nav_history">History</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_doctor">Add doctor</string>
    <string name="nav_info">Information</string>
    <string name="nav_logOut">Log out</string>

    <!--Settings-->
    <string name="pref_title_language">Language</string>
    <string-array name="pref_lang_list_titles">
        <item>English</item>
        <item>Serbian</item>
    </string-array>

    <string-array name="pref_lang_list_values">
        <item>eng</item>
        <item>srp</item>
    </string-array>

    <string name="notification">Notification Settings</string>
    <string name="vibration">Vibrate</string>
    <string name="notify">Notification</string>
    <string name="vib_on">Enabled</string>
    <string name="vib_off">Disabled</string>
    <string name="ringtone">Set Ringtone</string>

    <!--All doctors Activities-->
    <string name="add_doctor">Add doctor</string>
    <string name="delete_doctor">Delete doctor</string>
    <string name="delete_question">Do you really want to delete doctor?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="edit_doctor">Edit doctor</string>
    <string name="doctor_created">Doctor is successfully created</string>
    <string name="error_info_name_length_empty">Name can\'t be empty</string>
    <string name="error_info_name">Name must have at least two characters</string>
    <string name="error_info_name_symbols">Name can\'t contains symbols</string>
    <string name="error_info_lastname_length_empty">Lastname can\'t be empty</string>
    <string name="error_info_lastname">Lastname must have at least two characters</string>
    <string name="error_info_lastname_symbols">Lastname can\'t contains symbols</string>
    <string name="error_info_spec_length_empty">Speciality can\'t be empty</string>
    <string name="error_info_spec">Speciality must have at least two characters</string>
    <string name="error_info_spec_symbols">Speciality can\'t contains symbols</string>
    <string name="error_info_phone_length_empty">Phone number can\'t be empty</string>
    <string name="error_info_email_length_empty">Email can\'t be empty</string>
    <string name="error_info_email_pattern">Invalid format of email address</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="cancel_photo">Cancel</string>
    <string name="title">Add a photo</string>
    <string name="remove_photo">Remove photo</string>

    <!--Alarm activities-->
    <string name="alarm_set">Alarm is set on&#160;</string>
    <string name="alarm_cancel">Alarm is canceled</string>
    <string name="alarm_on_every">On every</string>
    <string name="alarm_hours_set">h from&#160;</string>
    <string name="alarm_hours_set2">&#160;to</string>
    <string name="alarm_hour_picker_title">On how much hours?</string>

    <!--add_reminder layout-->
    <string name="medic_name">Medication name</string>
    <string name="alarm_set_time">Alarm time</string>
    <string name="alarm_start_date">Start date</string>
    <string name="alarm_remind">Remind every?</string>
    <string name="alarm_until_time">End time</string>
    <string name="alarm_until_date">End date</string>
    <string name="alarm_confirm_button">Confirm alarm</string>
    <string name="alarm_cancel_button">Cancel alarm</string>

    <!--add reminder validation-->
    <string name="med_name">Please enter the medic name</string>
    <string name="med_st_time">Please select the start time</string>
    <string name="med_st_date">Please select the start date</string>
    <string name="med_rep">You didn\'t choose repeat hours</string>
    <string name="med_end_date">Please select the end date</string>

    <!--add doctor layout-->
    <string name="doc_name">Name</string>
    <string name="doc_lastname">Lastname</string>
    <string name="doc_spec">Medical speciality</string>
    <string name="doc_phone">Phone number</string>
    <string name="doc_email">Email</string>
    <string name="doc_add">Save</string>

    <!--Login layout-->
    <string name="login_alarm">Simple medicine reminder</string>
    <string name="login_history">Follow the history of measurement</string>
    <string name="login_call_doctor">Call a doctor directly from app</string>
    <string name="login_find_map">Find pharmacy in your area</string>
    <string name="login_click_here"><u>Sign in</u></string>

    <!--Alert dialog alarm-->
    <string name="d_delete">Delete history</string>
    <string name="d_warning">Do you really want to remove therapy from history?</string>
    <string name="d_stop_alarm">Stop alarm</string>
    <string name="d_stop_message">If you stop alarm, he will be removed from the list, are you sure?</string>
    <string name="d_stop">Stop</string>
    <string name="alarm_stoped">Alarm stoped</string>

    <!--Empty list texts-->
    <string name="no_alarms">There is no alarms for today</string>
    <string name="no_history">No history to display</string>

    <!--Strings for information layout-->
    <string name="info_version">VERSION %s</string>
    <string name="info_copyright">&#169; Radovan Bogdanic</string>
    <string name="title_activity_maps">Map</string>
</resources>
