<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="eng"
        android:entries="@array/pref_lang_list_titles"
        android:entryValues="@array/pref_lang_list_values"
        android:key="selected_language"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_language" />

    <PreferenceCategory
        android:title="@string/notification">

        <SwitchPreference
            android:defaultValue="black"
            android:key="vibrate_pref"
            android:title="@string/vibration"
            android:summaryOff="@string/vib_off"
            android:summaryOn="@string/vib_on" />

        <RingtonePreference
            android:key="ringtone_pref"
            android:title="@string/ringtone"
            android:summary="Default"
            android:ringtoneType="all"
            android:showDefault="true"
            android:showSilent="false" />
    </PreferenceCategory>

</PreferenceScreen>