<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_assignment_turned_in_black_48dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_reminder"
            android:icon="@drawable/ic_alarm_add_black_48dp"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_place_black_24dp"
            android:title="@string/nav_map" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/nav_history" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/bottom_menu">
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info_black_48dp"
            android:title="@string/nav_info" />
    </group>

</menu>
